--- a/src/shared/ui/About.astro
+++ b/src/shared/ui/About.astro
@@ -3,7 +3,7 @@ import { Picture } from "@astrojs/image/components";
 ---
 
 <article id="about" class="p-6 mb-4 bg-base-300 rounded-xl shadow-md">
-  <div class="flex space-x-4">
+  <div class="flex space-x-4 items-start">
     <div class="avatar">
       <div class="w-20 rounded-full">
         <Picture
